--- a/MarvelApp/MarvelApp/Home/CharactersCollectionViewCell.xib
+++ b/MarvelApp/MarvelApp/Home/CharactersCollectionViewCell.xib
@@ -11,20 +11,20 @@
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner"/>
         <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
         <collectionViewCell opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" id="gTV-IL-0wX" customClass="CharactersCollectionViewCell" customModule="MarvelApp" customModuleProvider="target">
-            <rect key="frame" x="0.0" y="0.0" width="314" height="205"/>
+            <rect key="frame" x="0.0" y="0.0" width="334" height="205"/>
             <autoresizingMask key="autoresizingMask"/>
             <view key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center">
-                <rect key="frame" x="0.0" y="0.0" width="314" height="205"/>
+                <rect key="frame" x="0.0" y="0.0" width="334" height="205"/>
                 <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                 <subviews>
                     <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="eqH-nJ-218">
-                        <rect key="frame" x="0.0" y="0.0" width="314" height="205"/>
+                        <rect key="frame" x="0.0" y="0.0" width="334" height="205"/>
                     </imageView>
                     <view contentMode="scaleToFill" ambiguous="YES" translatesAutoresizingMaskIntoConstraints="NO" id="0Q8-AO-HCr">
-                        <rect key="frame" x="0.0" y="127" width="314" height="78"/>
+                        <rect key="frame" x="0.0" y="127" width="334" height="78"/>
                         <subviews>
                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" ambiguous="YES" text="Label" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="n4L-tb-lVB">
-                                <rect key="frame" x="60" y="17" width="194" height="21"/>
+                                <rect key="frame" x="146.5" y="29" width="41.5" height="21"/>
                                 <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                 <color key="textColor" white="0.0" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                 <nil key="highlightedColor"/>
@@ -32,30 +32,24 @@
                         </subviews>
                         <color key="backgroundColor" systemColor="systemGray2Color"/>
                         <constraints>
-                            <constraint firstItem="n4L-tb-lVB" firstAttribute="leading" secondItem="0Q8-AO-HCr" secondAttribute="leading" constant="60" id="XeE-Y9-U7U"/>
-                            <constraint firstAttribute="trailing" secondItem="n4L-tb-lVB" secondAttribute="trailing" constant="60" id="YeG-OT-IB9"/>
-                            <constraint firstItem="n4L-tb-lVB" firstAttribute="centerX" secondItem="0Q8-AO-HCr" secondAttribute="centerX" id="hfl-Cm-x8O"/>
+                            <constraint firstItem="n4L-tb-lVB" firstAttribute="centerX" secondItem="0Q8-AO-HCr" secondAttribute="centerX" id="BXe-ak-0HD"/>
                         </constraints>
                     </view>
                 </subviews>
             </view>
             <viewLayoutGuide key="safeArea" id="ZTg-uK-7eu"/>
             <constraints>
-                <constraint firstItem="eqH-nJ-218" firstAttribute="top" secondItem="gTV-IL-0wX" secondAttribute="top" id="C50-zL-k2V"/>
-                <constraint firstItem="eqH-nJ-218" firstAttribute="leading" secondItem="gTV-IL-0wX" secondAttribute="leading" id="HrD-iX-g5G"/>
-                <constraint firstAttribute="trailing" secondItem="eqH-nJ-218" secondAttribute="trailing" id="N2r-as-F6M"/>
-                <constraint firstAttribute="bottom" secondItem="eqH-nJ-218" secondAttribute="bottom" id="SRN-mA-ZFl"/>
-                <constraint firstItem="0Q8-AO-HCr" firstAttribute="centerX" secondItem="eqH-nJ-218" secondAttribute="centerX" id="kJo-oO-vO1"/>
-                <constraint firstAttribute="trailing" secondItem="0Q8-AO-HCr" secondAttribute="trailing" id="o5E-tJ-tsF"/>
-                <constraint firstItem="0Q8-AO-HCr" firstAttribute="leading" secondItem="gTV-IL-0wX" secondAttribute="leading" id="tdN-Op-Aa8"/>
-                <constraint firstItem="0Q8-AO-HCr" firstAttribute="width" secondItem="eqH-nJ-218" secondAttribute="height" multiplier="314:205" id="xeo-51-Uxx"/>
+                <constraint firstItem="eqH-nJ-218" firstAttribute="top" secondItem="gTV-IL-0wX" secondAttribute="top" id="SeB-yz-iyY"/>
+                <constraint firstItem="eqH-nJ-218" firstAttribute="leading" secondItem="gTV-IL-0wX" secondAttribute="leading" id="WuJ-Bn-P6q"/>
+                <constraint firstAttribute="trailing" secondItem="eqH-nJ-218" secondAttribute="trailing" id="fWO-cD-e23"/>
+                <constraint firstAttribute="bottom" secondItem="eqH-nJ-218" secondAttribute="bottom" id="nLM-Ul-amM"/>
             </constraints>
-            <size key="customSize" width="314" height="205"/>
+            <size key="customSize" width="334" height="205"/>
             <connections>
                 <outlet property="Charecter" destination="eqH-nJ-218" id="VhW-pJ-PtN"/>
                 <outlet property="label" destination="n4L-tb-lVB" id="tF9-UP-dTy"/>
             </connections>
-            <point key="canvasLocation" x="14" y="-6"/>
+            <point key="canvasLocation" x="27.536231884057973" y="-47.209821428571423"/>
         </collectionViewCell>
     </objects>
     <resources>
